test/edition/preview/stacktrace.good
stacktrace.chpl:11: In function 'catchIt':
stacktrace.chpl:16: warning: stacktrace is unstable
caught error: oops
  (frame 1) stacktrace.chpl:13
  (frame 2) stacktrace.chpl:8
  (frame 3) stacktrace.chpl:5
  (frame 4) stacktrace.chpl:2
